# multicall.py

./: .git-blame-ignore-revs  .gitignore  pyproject.toml  readme.md
multicall/: call.py  constants.py  exceptions.py  multicall.py  signature.py  utils.py
tests/: conftest.py  test_call.py  test_multicall.py  test_utils.py
