[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "multicall"
version = "0.0.1"
authors = [ {name = "banteg"}, {name = "manumonti"} ]
description = "Aggregate results from multiple ethereum contract calls"
keywords = ["ethereum", "web3", "nucypher"]
requires-python = ">=3.8"
dependencies = [
  "web3 == 5.31.3",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "eth-brownie",
]
